# pydantic_ai_basic_project

./: main.py  pyproject.toml
