[project]
name = "fastapi-websocket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "jinja2>=3.1.4",
    "logfire[fastapi]>=2.6.0",
    "pydantic-ai>=0.0.9",
    "uvicorn>=0.32.1",
    "websockets>=14.1",
]
